2010-08-02  Steve Langasek  <vorlon@debian.org>

	* modules/pam_mkhomedir/Makefile.am: don't pass --version-script
	options when linking executables, only when linking libraries
	Patch from Julien Cristau <jcristau@debian.org>

2010-07-12  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_succeed_if/pam_succeed_if.c (pam_sm_authenticate): Add
	audit flag to enable logging about unknown user (#2917257).
	* modules/pam_succeed_if/pam_succeed_if.8.xml: Document audit.
	* modules/pam_succeed_if/pam_succeed_if.8: Regenerated from xml.
	* modules/pam_succeed_if/README: Regenerated from xml.

2010-06-22  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_umask/pam_umask.8.xml: Remove comparisation of
	gid and uid for usergroups.
	* modules/pam_umask/pam_umask.c (setup_limits_from_gecos): Likewise.
	Bug #3004656

	* configure.in: Don't check for libxcrypt if no xcrypt.h exists,
	fix typo introduced with 1.1.1.
	Reported by Diego Elio “Flameeyes” Pettenò.

2010-06-15  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_xauth/pam_xauth.c (pam_sm_close_session): Call
	setfsuid to be allowed to remove temporary files (#3010705).
	(pam_sm_open_session): Call fchown with correct permissions.

2010-06-09  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_tty_audit/Makefile.am (TESTS): Add tst-pam_tty_audit.
	* modules/pam_tty_audit/tst-pam_tty_audit: New.

2010-06-07  Steve Langasek  <vorlon@debian.org>

	* modules/pam_tty_audit/Makefile.am: If we don't have the libraries
	required for building pam_tty_audit, we shouldn't install the manpage
	either.

2010-05-27  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_userdb/pam_userdb.c: Define HAVE_DBM
	for BerkDB 5.0 support. Patch by Diego Elio Pettenò.

2010-04-15  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_exec/pam_exec.8.xml: Fix example.

2010-04-13  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_pwhistory/opasswd.c: Fix compilation if
	cyprt_r() is not available.
	* configure.in: check for getutent_r.