@@ -1,5 +1,5 @@
 #
-# This is the configuration file for the pam_group module. 
+# This is the configuration file for the pam_group module.
 #
 
 #
@@ -93,6 +93,13 @@
 
 #xsh; tty* ;sword;!Wk0900-1800;sound, play
 #xsh; tty* ;*;Al0900-1800;floppy
+
+#
+# yet another example: any member of the group 'admin' running
+# 'xsh' on tty*, is granted access (at any time) to the group 'plugdev'
+#
+
+#xsh; tty* ;%admin;Al0000-2400;plugdev
 
 #
 # End of group.conf file
